--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@picocss/pico": "^2.0.6",
+    "micromark": "^4.0.0"
   }
 }
